Update the swagger docs
