# web/app.go
@@ -193,7 +193,7 @@ func NewAppWithDeps(config *Config, deps Dependencies) (*App, error) {
 		apiGroup.POST("/checks/:id/settings", ApiCheckCreateSettingsByIdHandler(deps.checksService))
 		apiGroup.PUT("/checks/catalog", ApiCreateChecksCatalogHandler(deps.checksService))
 		apiGroup.GET("/checks/catalog", ApiChecksCatalogHandler(deps.checksService))
-		apiGroup.POST("/checks/:id/results", ApiCreateChecksResultstaHandler(deps.checksService))
+		apiGroup.POST("/checks/:id/results", ApiCreateChecksResultHandler(deps.checksService))
 	}
 
 	collectorEngine := deps.collectorEngine
